# llama-stack-examples

./: .env.example  .gitignore  Dockerfile.chainlit  Dockerfile.demo_01  Dockerfile.playground  README.md  chainlit.md  chainlit_app.py  demo_01_app.py  demo_01_client.py  demo_script.py  docker-compose.yml  llama-stack-config.yaml  main.py  pyproject.toml  simple_demo.py  test_log_print.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml  use-case.yaml
apps/01-chatbot/: README.md  demo_01_client.py
apps/02-deep-research/: README.md  deep_search_agent.py  requirements.txt  run.yml
notebooks/: README.md
notebooks/01-responses/: README.md  README_NPS.md  responses-api.ipynb
toolguard/: book_reserv.py  create_shield.py  demo_resps.py  demo_shield.py  list_airports.py  run.yaml
